# openrelik-worker-clamav

./: .gitignore  DEPLOYMENT-CHECKLIST.md  Dockerfile  README.md  SETUP.md  START-HERE.txt  Vagrantfile  WINDOWS_VM_STATUS.md  ansible.cfg  config.yml  network.xml  pyproject.toml
ansible/: README.md  ansible.cfg  inventory.yml  requirements.txt  requirements.yml
ansible/roles/openrelik/files/openrelik-worker-clamav/: README.md  openrelik.yaml  pyproject.toml
ansible/roles/openrelik/files/openrelik-worker-clamav/src/: tasks.py
ansible/roles/openrelik/files/openrelik-worker-clamav/tests/: test_tasks.py
ansible/roles/openrelik/files/openrelik-worker-elasticsearch/: Dockerfile  README.md  openrelik.yaml  pyproject.toml
ansible/roles/openrelik/files/openrelik-worker-elasticsearch/src/: __init__.py  tasks.py
ansible/roles/openrelik/files/openrelik-worker-elasticsearch/tests/: test_tasks.py
docs/: ARCHITECTURE.md  Access-URLs.md  Architecture.md  CLAMAV-SETUP.md  COMPONENTS.md  Configuration.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-FLOW.md  EML-SETUP.md  EXIF-SETUP.md  EXTERNAL-ACCESS-CONFIG.md  EZTOOLS-SETUP.md  GUACAMOLE-SETUP.md  Getting-Started.md  Guacamole-Guide.md  INTEGRATION-SUMMARY.md  Kasm-Guide.md  LANDING-PAGE.md  Maigret-Guide.md  OpenRelik-Guide.md  PANGOLIN-ACCESS.md  PANGOLIN-INTEGRATION-REVIEW.md  PROJECT-REVIEW.md  QUICK-REFERENCE.md  README.md  REGRIPPER-SETUP.md  REMnux-Guide.md  Roles.md  SSDEEP-SETUP.md  Troubleshooting.md  WIREGUARD-MULLVAD-GUIDE.md  Windows-Analysis-VM.md  WireGuard-Setup.md
pangolin/: docker-compose.yml
patches/: README.md  apply-task-utils-fix.py  openrelik-worker-common-task-utils-json-fix.patch
provision/: config.yml  config.yml.example  firewall-main.yml  firewall.yml  neko-main.yml  neko.yml  openrelik-main.yml  openrelik.yml  pangolin-main.yml  playbook.yml  remnux-main.yml  remnux.yml  settings.toml.example
scripts/: NEKO-QUICKREF.sh  check-status.sh  clean-logs.sh  configure-neko-guacamole.sh  deploy-all.sh  deploy-and-test.sh  deploy-eztools.sh  pangolin-deploy.sh  provision.sh  rebuild-lab.sh  set-neko-webrtc-ip.sh  start-lab.sh  test-connections.sh  wg-config.sh
services/: index.html  index.html.j2
src/: __init__.py  tasks.py
(+132 files in other folders)
