[project]
name = "openrelik-worker-clamav"
version = "2026.02.24"
description = "ClamAV worker for OpenRelik workflows"
authors = [{ name = "OpenRelik", email = "openrelik@google.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "openrelik-worker-common>=0.17.1",
    "debugpy>=1.8.7,<2",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
