[project]
name = "openrelik-worker-elasticsearch"
version = "0.1.0"
description = "OpenRelik worker that exports workflow results to Elasticsearch"
authors = [{ name = "OpenRelik" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "celery[redis]>=5.4.0,<6",
    "elasticsearch>=8.14.0,<9",
    "openrelik-worker-common>=0.17",
]

[dependency-groups]
test = [
    "pytest>=8.3.0,<9",
]

[tool.uv]
package = false
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
